got websocketing working

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,13 @@
     <canvas id="drawCanvas" width="500" height="300"></canvas>
     <br>
     <button id="clearButton">Clear</button>
-    <button id="confirmButton">Confirm & Save</button>
+    <button id="confirmButton">Confirm &amp; Save</button>
     
     <p id="maximaCode">Awaiting Input</p>
 
     <img id="savedImage" alt="Your drawing will appear here" style="margin-top: 20px; max-width: 100%;">
 
-    <script type="module" src="static/scripts/script.js" ></script>
+    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+    <script type="module" src="static/scripts/script.js"></script>
 </body>
 </html>
