--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,11 @@
     <title>Draw and Save</title>
     <link rel="stylesheet" type="text/css" href="static/styles/style.css">
     <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
-    <!-- <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
     <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
     <h2>Draw Here</h2>
-    <canvas id="drawCanvas" width="500" height="300"></canvas>
+    <canvas id="drawCanvas"></canvas>
     <br>
     <button id="clearButton">Clear</button>
     
