--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
           <div class="card-body">
             <h6>Maxima Code</h6>
             <pre id="maximaCode">Awaiting Input...</pre>
-            <h6 class="mt-3">Rendered Preview</h6>
+            <h6 class="mt-3">Simplified Rendered Preview</h6>
             <div id="maximaRendered">Awaiting Input...</div>
           </div>
         </div>
